--- a/templates/firsttime.html
+++ b/templates/firsttime.html
@@ -278,8 +278,8 @@
                 <input type="number" id="goal" name="goal" required>
 
                 <label for="slider">Value: <span id="sliderValue">0.25</span> kg</label>
-                <input type="range" id="slider" min="0" max="1" step="0.25" value="0.25"
-                    oninput="updateValue(this.value)">
+                <input name="lossperweek" type="range" id="slider" min="0" max="1" step="0.25" value="0.25"
+                    id="lossperweek" oninput="updateValue(this.value)">
 
                 <script>
                     function updateValue(val) {
