update calorie targets in homepage

--- a/templates/homepage_refreshing.html
+++ b/templates/homepage_refreshing.html
@@ -946,8 +946,8 @@
                 </svg>
                 <div class="percentage">50</div>
             </div>
-            X/X<br>
-            Total calories burnt
+            X/{{ cals_to_eat }}<br>
+            Total calories eaten
 
             <div class="small-progress">
                 <div class="small-main-progress-container">
